[package]
name = "tcrab"
version = "0.1.0"
authors = ["Darren Kaste <darrenkaste@gmail.com>"]
edition = "2018"

[dependencies]
tcrab_console = { path = "../tcrab_console" }

[dev-dependencies]
pretty_env_logger = "^0.3.0"
image = { version = "^0.21.2", default-features = false, features = ["png_codec"] }
tcrab_console_gl = { path = "../tcrab_console_gl" }